--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.4",
+    "array-move": "^3.0.1",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.3",
+    "react-sortable-hoc": "^1.11.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
