--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "array-move": "^3.0.1",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-sortable-hoc": "^1.11.0",
     "redux": "^4.0.5"
