--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "default_icon": "favicon.png",
     "default_title": "Open the popup"
   },
-  "permissions": [],
+  "permissions": ["storage"],
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
