--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.5.4",
     "array-move": "^3.0.1",
     "axios": "^0.19.2",
+    "bizcharts": "^4.0.14",
     "cross-env": "^7.0.2",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
