--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^0.9.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.4",
     "array-move": "^3.0.1",
     "axios": "^0.19.2",
-    "bizcharts": "^4.0.14",
     "cross-env": "^7.0.2",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
