--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
-  "name": "Stock Tracker",
-  "description": "This extension is a Stock Tracker APP",
-  "version": "0.0.1",
+  "name": "US Stock Tracker",
+  "description": "This is an US Stock/ETF portfolio checker and rebalancing calculator APP.",
+  "version": "1.0.0",
   "browser_action": {
     "default_popup": "index.html",
     "default_icon": "icon48.png",
-    "default_title": "Open the popup"
+    "default_title": "US Stock Tracker"
   },
   "permissions": ["storage"],
   "icons": {
