--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-sortable-hoc": "^1.11.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
