--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "array-move": "^3.0.1",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
