--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "3.4.3",
     "react-sortable-hoc": "^1.11.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
